# Mongoose-Engine

./: CMakeLists.txt  LICENSE  Makefile  README.md  docker-compose.yml
Docker/: Dockerfile
Docker/Scripts/: build.sh  format.sh
src/: main.c
